--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
+    "exphbs": "^1.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.1",
     "mocha": "^9.1.3",
